--- a/.github/workflows/cloud-build.yml
+++ b/.github/workflows/cloud-build.yml
@@ -1,22 +1,42 @@
-name: Manual Build Windows
-on: workflow_dispatch # 这会让 Actions 页面多出一个手动运行按钮
+name: Full Platform Build
+on: workflow_dispatch
 
 jobs:
   build:
-    runs-on: windows-latest
+    name: Build for ${{ matrix.platform }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        include:
+          - platform: Windows
+            os: windows-latest
+            build_cmd: flutter build windows --release
+            artifact_path: simple_live_app/build/windows/runner/Release/
+          - platform: Android
+            os: ubuntu-latest
+            build_cmd: flutter build apk --release --target-platform android-arm64
+            artifact_path: simple_live_app/build/app/outputs/flutter-apk/*.apk
+          - platform: iOS
+            os: macos-latest
+            build_cmd: flutter build ios --release --no-codesign # 无证书编译
+            artifact_path: simple_live_app/build/ios/iphoneos/*.app
+
     steps:
       - uses: actions/checkout@v4
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
-          flutter-version: '3.10.7' # 指定你在本地测试成功的版本
-      - name: Build
+          cache: true
+      - name: Get Dependencies
         run: |
           cd simple_live_app
           flutter pub get
-          flutter build windows --release
-      - name: Upload
+      - name: Build Platform
+        run: |
+          cd simple_live_app
+          ${{ matrix.build_cmd }}
+      - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: SimpleLive-Windows-Package
-          path: simple_live_app/build/windows/runner/Release/
+          name: SimpleLive-${{ matrix.platform }}
+          path: ${{ matrix.artifact_path }}
