--- a/.github/workflows/cloud-build.yml
+++ b/.github/workflows/cloud-build.yml
@@ -1,65 +1,177 @@
-name: Ultimate Cloud Build
-on: workflow_dispatch # 支持手动点击按钮触发编译
+name: app-build-action-dev
+
+on:
+  workflow_dispatch:
+  push:
+    tags:
+      - "dev_v*"
+
+# 全局默认配置：减少重复的 cd 命令
+defaults:
+  run:
+    working-directory: simple_live_app
 
 jobs:
-  build:
-    name: Build for ${{ matrix.platform }}
-    runs-on: ${{ matrix.os }}
-    # 即使其中一个平台失败，其他平台也会继续完成，互不干扰
-    continue-on-error: true 
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - platform: Windows
-            os: windows-latest
-            build_cmd: flutter build windows --release
-          - platform: Android
-            os: ubuntu-latest
-            build_cmd: flutter build apk --debug
-          - platform: iOS
-            os: macos-latest
-            build_cmd: flutter build ios --release --no-codesign
-
+  # ================= Android, iOS, MacOS 构建 =================
+  build-mac-ios-android:
+    runs-on: macos-latest
+    permissions:
+      contents: write
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-      
-      - name: Setup Flutter
+      - uses: actions/checkout@v4
+        with:
+          ref: dev
+
+      # APK签名设置
+      - name: Download Android keystore
+        id: android_keystore
+        uses: timheuer/base64-to-file@v1.2
+        with:
+          fileName: keystore.jks
+          encodedString: ${{ secrets.KEYSTORE_BASE64 }}
+
+      - name: Create key.properties
+        run: |
+          echo "storeFile=${{ steps.android_keystore.outputs.filePath }}" > android/key.properties
+          echo "storePassword=${{ secrets.STORE_PASSWORD }}" >> android/key.properties
+          echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
+          echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
+
+      - uses: actions/setup-java@v4
+        with:
+          distribution: "zulu"
+          java-version: "17"
+          cache: "gradle"
+
+      - name: Flutter action
         uses: subosito/flutter-action@v2
         with:
-          channel: 'stable'
+          flutter-version: "3.38.x"
           cache: true
 
-      - name: Install Dependencies
-        run: |
-          cd simple_live_app
-          flutter pub get
+      - name: Restore packages
+        run: flutter pub get
 
-      - name: Fix Android Environment
-        if: matrix.platform == 'Android'
-        run: |
-          # 强行注入 key.properties 防止 build.gradle.kts 报错
-          mkdir -p simple_live_app/android
-          echo "storePassword=password" > simple_live_app/android/key.properties
-          echo "keyPassword=password" >> simple_live_app/android/key.properties
-          echo "keyAlias=key" >> simple_live_app/android/key.properties
-          echo "storeFile=../key.jks" >> simple_live_app/android/key.properties
-        shell: bash
+      # 构建 Android
+      - name: Build APK
+        run: flutter build apk --release --split-per-abi
 
-      - name: Build Platform
-        shell: bash
+      # 构建 iOS (未签名)
+      - name: Build IPA
         run: |
-          cd simple_live_app
-          ${{ matrix.build_cmd }}
+          flutter build ios --release --no-codesign
+          mkdir -p build/ios/iphoneos/Payload
+          cp -R build/ios/iphoneos/Runner.app build/ios/iphoneos/Payload/Runner.app
+          cd build/ios/iphoneos/
+          zip -q -r ios_no_sign.ipa Payload
 
+      # 构建 MacOS
+      - name: Build MacOS
+        run: |
+          npm install -g appdmg
+          dart pub global activate flutter_distributor
+          flutter config --enable-macos-desktop
+          export PATH="$PATH":"$HOME/.pub-cache/bin"
+          flutter_distributor package --platform macos --targets dmg,zip --skip-clean
+
+      # 统一上传本阶段工件
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: SimpleLive-${{ matrix.platform }}-Package
-          # 使用 ** 通配符递归搜索，自动适配 x64 或其他路径
+          name: mac-ios-android-builds
           path: |
-            simple_live_app/build/windows/**/Release/
-            simple_live_app/build/app/outputs/flutter-apk/*.apk
-            simple_live_app/build/ios/iphoneos/*.app
-          if-no-files-found: error
+            simple_live_app/build/app/outputs/flutter-apk/app-*-release.apk
+            simple_live_app/build/ios/iphoneos/ios_no_sign.ipa
+            simple_live_app/build/dist/*/*.dmg
+            simple_live_app/build/dist/*/*.zip
+
+  # ================= Linux 构建 =================
+  build-linux:
+    runs-on: ubuntu-22.04
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: dev
+      - uses: subosito/flutter-action@v2
+        with:
+          flutter-version: "3.38.x"
+          cache: true
+      - name: Install Dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libasound2-dev libmpv-dev mpv
+      - name: Build Linux
+        run: |
+          dart pub global activate flutter_distributor
+          export PATH="$PATH":"$HOME/.pub-cache/bin"
+          flutter config --enable-linux-desktop
+          flutter pub get
+          flutter_distributor package --platform linux --targets deb,zip --skip-clean
+      - name: Upload Linux Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: linux-builds
+          path: |
+            simple_live_app/build/dist/*/*.deb
+            simple_live_app/build/dist/*/*.zip
+
+  # ================= Windows 构建 =================
+  build-windows:
+    runs-on: windows-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: dev
+      - uses: subosito/flutter-action@v2
+        with:
+          flutter-version: "3.38.x"
+          cache: true
+      - name: Build Windows
+        run: |
+          dart pub global activate flutter_distributor
+          flutter config --enable-windows-desktop
+          flutter pub get
+          # 临时将 pub bin 加入 Windows Path
+          $env:Path += ";$env:LocalAppData\Pub\Cache\bin"
+          flutter_distributor package --platform windows --targets msix,zip --skip-clean
+      - name: Upload Windows Artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: windows-builds
+          path: |
+            simple_live_app/build/dist/*/*.msix
+            simple_live_app/build/dist/*/*.zip
+
+  # ================= 自动发布 Release =================
+  publish:
+    needs: [build-mac-ios-android, build-linux, build-windows]
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
+    permissions:
+      contents: write
+    steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: all-builds
+          merge-multiple: true
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            all-builds/*.apk
+            all-builds/*.ipa
+            all-builds/*.dmg
+            all-builds/*.deb
+            all-builds/*.msix
+            all-builds/*.zip
+          body: "Auto-generated release for version ${{ github.ref_name }}"
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
