--- a/.github/workflows/cloud-build.yml
+++ b/.github/workflows/cloud-build.yml
@@ -6,7 +6,7 @@ on:
     tags:
       - "dev_v*"
 
-# 全局默认配置：减少重复的 cd 命令
+# 全局默认在 simple_live_app 目录下执行命令
 defaults:
   run:
     working-directory: simple_live_app
@@ -18,11 +18,9 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: actions/checkout@v4
-        with:
-          ref: dev
+      - name: Checkout Code
+        uses: actions/checkout@v4 # 自动签出触发该工作流的 Ref
 
-      # APK签名设置
       - name: Download Android keystore
         id: android_keystore
         uses: timheuer/base64-to-file@v1.2
@@ -37,13 +35,14 @@ jobs:
           echo "keyPassword=${{ secrets.KEY_PASSWORD }}" >> android/key.properties
           echo "keyAlias=${{ secrets.KEY_ALIAS }}" >> android/key.properties
 
-      - uses: actions/setup-java@v4
+      - name: Setup Java
+        uses: actions/setup-java@v4
         with:
           distribution: "zulu"
           java-version: "17"
           cache: "gradle"
 
-      - name: Flutter action
+      - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: "3.38.x"
@@ -52,12 +51,10 @@ jobs:
       - name: Restore packages
         run: flutter pub get
 
-      # 构建 Android
       - name: Build APK
         run: flutter build apk --release --split-per-abi
 
-      # 构建 iOS (未签名)
-      - name: Build IPA
+      - name: Build IPA (Unsigned)
         run: |
           flutter build ios --release --no-codesign
           mkdir -p build/ios/iphoneos/Payload
@@ -65,7 +62,6 @@ jobs:
           cd build/ios/iphoneos/
           zip -q -r ios_no_sign.ipa Payload
 
-      # 构建 MacOS
       - name: Build MacOS
         run: |
           npm install -g appdmg
@@ -74,7 +70,6 @@ jobs:
           export PATH="$PATH":"$HOME/.pub-cache/bin"
           flutter_distributor package --platform macos --targets dmg,zip --skip-clean
 
-      # 统一上传本阶段工件
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -91,17 +86,20 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: actions/checkout@v4
-        with:
-          ref: dev
-      - uses: subosito/flutter-action@v2
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
         with:
           flutter-version: "3.38.x"
           cache: true
+
       - name: Install Dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libasound2-dev libmpv-dev mpv
+
       - name: Build Linux
         run: |
           dart pub global activate flutter_distributor
@@ -109,6 +107,7 @@ jobs:
           flutter config --enable-linux-desktop
           flutter pub get
           flutter_distributor package --platform linux --targets deb,zip --skip-clean
+
       - name: Upload Linux Artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -123,21 +122,25 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: actions/checkout@v4
-        with:
-          ref: dev
-      - uses: subosito/flutter-action@v2
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
         with:
           flutter-version: "3.38.x"
           cache: true
+
       - name: Build Windows
+        shell: pwsh
         run: |
           dart pub global activate flutter_distributor
+          # 将 pub bin 路径加入当前会话的 Path
+          $env:Path += ";$env:LocalAppData\Pub\Cache\bin"
           flutter config --enable-windows-desktop
           flutter pub get
-          # 临时将 pub bin 加入 Windows Path
-          $env:Path += ";$env:LocalAppData\Pub\Cache\bin"
           flutter_distributor package --platform windows --targets msix,zip --skip-clean
+
       - name: Upload Windows Artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -155,22 +158,25 @@ jobs:
       contents: write
     steps:
       - name: Download all artifacts
-        uses: actions/download-artifact@v4
+        uses: actions/upload-artifact/merge@v4
         with:
-          path: all-builds
-          merge-multiple: true
+          name: all-platform-builds
+          delete-merged: true
 
       - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           files: |
-            all-builds/*.apk
-            all-builds/*.ipa
-            all-builds/*.dmg
-            all-builds/*.deb
-            all-builds/*.msix
-            all-builds/*.zip
-          body: "Auto-generated release for version ${{ github.ref_name }}"
+            **/*.apk
+            **/*.ipa
+            **/*.dmg
+            **/*.deb
+            **/*.msix
+            **/*.zip
+          body: |
+            ## Simple Live App 自动构建发布
+            版本号: ${{ github.ref_name }}
+            构建时间: ${{ github.event.head_commit.timestamp }}
           draft: false
           prerelease: false
         env:
